--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <section class="accueil-introduction">
             <div class="accueil-paragraphe">
                 <h1>Les photos de Tim</h1>
+                <p>helloyhuybytgbytgy7gh7yh</p>
                 <p>
                     Bienvenue dans mon monde visuel, où chaque image raconte une histoire captivante.
                     Où <em>professionalisme</em> s’allie avec <em>passion</em>. 
