--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="accueil-paragraphe">
                 <h1>Les photos de Tim</h1>
                 <p>helloyhuybytgbytgy7gh7yh</p>
+                <p>Water salam</p>
                 <p>
                     Bienvenue dans mon monde visuel, où chaque image raconte une histoire captivante.
                     Où <em>professionalisme</em> s’allie avec <em>passion</em>. 
